Fix spelling of 'Akhmad' to 'Akmad' in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CV — Akhmad Makhbubie</title>
+  <title>CV — Akmad Makhbubie</title>
 
   <style>
     *{box-sizing:border-box;}
@@ -49,7 +49,7 @@
 
     .name{
       margin:0;
-      font-size:23px;
+      font-size:20px;
       font-weight:800;
       white-space:nowrap;
       letter-spacing:1px;
@@ -163,7 +163,7 @@
          alt="Foto Profil">
 
     <div class="heading">
-      <h1 class="name">AKHMAD MAKHBUBIE</h1>
+      <h1 class="name">AKMAD MAKHBUBIE</h1>
       <p class="summary">
         Lulusan SMK dengan keahlian dalam bidang Elektronika. Memiliki keterampilan teknis yang kuat
         serta siap berkontribusi secara profesional di lingkungan kerja.
